# api/router/api/areas.ts
@@ -3,38 +3,7 @@
 const router = require('express').Router();
 const db = require('../../models');
 const requireRole = require('../permissions');
-
-/**
- * @apiDefine areaAttributes
- * @apiSuccess {String}  areas.id Autoincremented Identifier of the table
- * @apiSuccess {String}  areas.name
- * @apiSuccess {String}  areas.short
- * @apiSuccess {Number[]}  areas.tables
- * @apiSuccess {Boolean}  areas.enabled
- */
-
-/**
- * @apiDefine areaParams
- * @apiParam {String}  areas.id
- * @apiParam {String}  areas.name
- * @apiParam {String}  areas.short
- * @apiParam {Boolean}  areas.enabled
- */
-
-/**
- * @api {get} api/areas/:id Request Area
- * @apiGroup Area
- * @apiName GetArea
- * @apiParam {string} id Areas unique ID.
-
-  *@apiUse token
-
- * @apiSuccess {Object} areas Area
- * @apiUse areaAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
+const { createNotification } = require('../../util/notifications');
 
 // waiter or admin
 router.get('/:id', requireRole('waiter', 'admin'), function (req, res) {
@@ -42,21 +11,6 @@ router.get('/:id', requireRole('waiter', 'admin'), function (req, res) {
     res.send({ area });
   });
 });
-
-/**
- * @api {get} api/areas Request all areas
- * @apiGroup Area
- * @apiName Getareas
-
- * @apiParam {string} x-access-token JSONWebToken | Mandatory if not set as header
- * @apiHeader {string} x-access-token JSONWebToken | Mandatory if not in params
-
- * @apiSuccess {Object[]} areas Area
- * @apiUse areaAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
 
 // waiter or admin
 router.get('/', requireRole('waiter', 'admin'), function (req, res) {
@@ -79,18 +33,6 @@ router.get('/', requireRole('waiter', 'admin'), function (req, res) {
   });
 });
 
-/**
- * @api {post} api/areas/ Create one area
- * @apiGroup Area
- * @apiName PostArea
- * @apiUse token
- * @apiParam {Object} areas
- * @apiUse areaParams
- * @apiUse areaAttributes
- *
- * @apiPermission admin
- */
-
 // admin only
 router.post('/', requireRole('admin'), function (req, res) {
   const io = req.app.get('io');
@@ -98,6 +40,17 @@ router.post('/', requireRole('admin'), function (req, res) {
   db.Area.create(payload).then(area => {
     res.send({ area });
     io.sockets.emit("update", { area, eventId: req.eventId });
+    createNotification({
+      eventId: req.eventId,
+      entityType: 'area',
+      entityId: area.id,
+      action: 'created',
+      message: `Neuer Bereich: ${area.name}`
+    }).then((notification) => {
+      if (notification) {
+        io.sockets.emit("notification", { notification, eventId: req.eventId });
+      }
+    });
   }).catch(error => {
     res.status(400).send({
       'errors': {
@@ -106,18 +59,6 @@ router.post('/', requireRole('admin'), function (req, res) {
     });
   });
 });
-
-/**
- * @api {put} api/areas/:id Update one area
- * @apiGroup Area
- * @apiName UpdateArea
- * @apiUse token
- * @apiParam {Object} areas
- * @apiUse areaParams
- * @apiUse areaAttributes
- *
- * @apiPermission admin
- */
 
 // admin only
 router.put('/:id', requireRole('admin'), function (req, res) {
@@ -136,16 +77,6 @@ router.put('/:id', requireRole('admin'), function (req, res) {
     });
   });
 });
-
-/**
- * @api {delete} api/areas/:id Delete one table
- * @apiGroup Area
- * @apiName DeleteArea
- * @apiParam {number} string Id
- *
- * @apiPermission admin
- * @apiSuccess {object} object empty Object {}
- */
 
 // admin only
 router.delete('/:id', requireRole('admin'), async function (req, res) {
