# api/router/api/categories.ts
@@ -2,46 +2,7 @@
 
 const router = require('express').Router();
 const db = require('../../models');
-
-/**
- * @apiDefine categoryAttributes
- * @apiSuccess {Number}  categories.id Autoincremented Identifier of the category
- * @apiSuccess {String}  categories.name Name of the category
- * @apiSuccess {Boolean}  categories.enabled Flag if the Category is enabled
- * @apiSuccess {String}  categories.description
- * @apiSuccess {String}  categories.icon identifier of the icon shown for the category
- * @apiSuccess {Boolean}  categories.showAmount Flag if the Amount and Unit is shown in the item
- * @apiSuccess {String}  categories.printer Dedicaded Printer (where orders of this categories should be printed)
- * @apiSuccess {Number} categories.çategory Parentcategory
- */
-
-/**
- * @apiDefine categoryParams
- * @apiParam {Number}  categories.id Autoincremented Identifier of the category
- * @apiParam {String}  categories.name Name of the category
- * @apiParam {Boolean}  categories.enabled Flag if the Category is enabled
- * @apiParam {String}  categories.description
- * @apiParam {String}  categories.icon identifier of the icon shown for the category
- * @apiParam {Boolean}  categories.showAmount Flag if the Amount and Unit is shown in the item
- * @apiParam {String}  categories.printer Dedicaded Printer (where orders of this categories should be printed)
- * @apiParam {Number[]} categories.categories Subcategories
- * @apiParam {Number} categories.çategory Parentcategory
- */
-
-/**
- * @api {get} api/categories/:id Request Category
- * @apiGroup Category
- * @apiName GetCategory
- * @apiParam {number} string Categorys unique ID.
-
-  *@apiUse token
-
- * @apiSuccess {Object} categories Category
- * @apiUse categoryAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
+const { createNotification } = require('../../util/notifications');
 
 router.get('/:id', function (req, res) {
   db.Category.findOne({ where: { id: req.params.id, eventId: req.eventId } }).then(category => {
@@ -56,21 +17,6 @@ router.get('/:id', function (req, res) {
   });
 });
 
-/**
- * @api {get} api/categories Request all categories
- * @apiGroup Category
- * @apiName Getcategories
-
- * @apiParam {string} x-access-token JSONWebToken | Mandatory if not set as header
- * @apiHeader {string} x-access-token JSONWebToken | Mandatory if not in params
-
- * @apiSuccess {Object[]} categories Category
- * @apiUse categoryAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
-
 router.get('/', function (req, res) {
   db.Category.findAll({ where: { eventId: req.eventId } }).then(categories => {
     res.send({ categories });
@@ -83,25 +29,23 @@ router.get('/', function (req, res) {
   });
 });
 
-/**
- * @api {post} api/categories/ Create one category
- * @apiGroup Category
- * @apiName PostCategory
- * @apiUse token
- * @apiParam {Object} categories
- * @apiSuccess {Object} categories
- * @apiUse categoryParams
- * @apiUse categoryAttributes
- *
- * @apiPermission admin
- */
-
 router.post('/', function (req, res) {
   const io = req.app.get('io');
   const payload = { ...req.body.category, eventId: req.eventId };
   db.Category.create(payload).then(category => {
     res.send({ category });
     io.sockets.emit("update", { category, eventId: req.eventId });
+    createNotification({
+      eventId: req.eventId,
+      entityType: 'category',
+      entityId: category.id,
+      action: 'created',
+      message: `Neue Kategorie: ${category.name}`
+    }).then((notification) => {
+      if (notification) {
+        io.sockets.emit("notification", { notification, eventId: req.eventId });
+      }
+    });
   }).catch(error => {
     res.status(400).send({
       'errors': {
@@ -110,19 +54,6 @@ router.post('/', function (req, res) {
     });
   });
 });
-
-/**
- * @api {put} api/categories/:id Update one category
- * @apiGroup Category
- * @apiName UpdateCategory
- * @apiUse token
- * @apiParam {Object} categories
- * @apiSuccess {Object} categories
- * @apiUse categoryParams
- * @apiUse categoryAttributes
- *
- * @apiPermission admin
- */
 
 router.put('/:id', async function (req, res) {
   if (!req.body.category) {
@@ -152,16 +83,6 @@ router.put('/:id', async function (req, res) {
     });
   }
 });
-
-/**
- * @api {delete} api/categories/:id Delete one category
- * @apiGroup Category
- * @apiName DeleteCategory
- * @apiParam {number} string Id
- *
- * @apiPermission admin
- * @apiSuccess {object} object empty Object {}
- */
 
 router.delete('/:id', function (req, res) {
   const io = req.app.get('io');
