# api/router/api/tables.ts
@@ -3,43 +3,7 @@
 const express = require('express');
 const router = express.Router();
 const db = require('../../models');
-
-/**
- * @apiDefine tableAttributes
- * @apiSuccess {Number}  tables.id Autoincremented Identifier of the table
- * @apiSuccess {Number}  tables.area Id of the Area
- * @apiSuccess {String}  tables.name
- * @apiSuccess {Number}  tables.x
- * @apiSuccess {Number}  tables.y
- * @apiSuccess {Boolean} tables.custom
- * @apiSuccess {Boolean} tables.enabled
- */
-
-/**
- * @apiDefine tableParams
- * @apiParam {Number}  tables.id
- * @apiParam {String}  tables.area Id of the Area
- * @apiParam {String}  tables.name
- * @apiParam {Number}  tables.x
- * @apiParam {Number}  tables.y
- * @apiParam {Boolean} tables.custom
- * @apiParam {Boolean} tables.enabled
- */
-
-/**
- * @api {get} api/tables/:id Request Table
- * @apiGroup Table
- * @apiName GetTable
- * @apiParam {number} string Tables unique ID.
-
-  *@apiUse token
-
- * @apiSuccess {Object} tables Table
- * @apiUse tableAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
+const { createNotification } = require('../../util/notifications');
 
 router.get('/:id', function (req, res) {
   db.Table.findOne({ where: { id: req.params.id, eventId: req.eventId } }).then(table => {
@@ -53,21 +17,6 @@ router.get('/:id', function (req, res) {
   });
 });
 
-/**
- * @api {get} api/tables Request all tables
- * @apiGroup Table
- * @apiName Gettables
-
- * @apiParam {string} x-access-token JSONWebToken | Mandatory if not set as header
- * @apiHeader {string} x-access-token JSONWebToken | Mandatory if not in params
-
- * @apiSuccess {Object[]} tables Table
- * @apiUse tableAttributes
-
- * @apiPermission waiter
- * @apiPermission admin
- */
-
 router.get('/', function (req, res) {
   db.Table.findAll({ where: { eventId: req.eventId } }).then(tables => {
     res.send({ tables });
@@ -80,25 +29,22 @@ router.get('/', function (req, res) {
   });
 });
 
-/**
- * @api {post} api/tables/ Create one table
- * @apiGroup Table
- * @apiName PostTable
- * @apiUse token
- * @apiParam {Object} tables
- * @apiUse tableParams
- * @apiUse tableAttributes
- *
- * @apiPermission admin
- */
-
 router.post('/', function (req, res) {
   const io = req.app.get('io');
-  let table = req.body.table;
-
   db.Table.create({ ...req.body.table, eventId: req.eventId }).then(table => {
     io.sockets.emit("update", { table, eventId: req.eventId });
     res.send({ table });
+    createNotification({
+      eventId: req.eventId,
+      entityType: 'table',
+      entityId: table.id,
+      action: 'created',
+      message: `Neuer Tisch: ${table.name}`
+    }).then((notification) => {
+      if (notification) {
+        io.sockets.emit("notification", { notification, eventId: req.eventId });
+      }
+    });
   }).catch(error => {
     res.status(400).send({
       'errors': {
@@ -110,28 +56,29 @@ router.post('/', function (req, res) {
 
 });
 
-/**
- * @api {put} api/tables/:id Update one table
- * @apiGroup Table
- * @apiName UpdateTable
- * @apiUse token
- * @apiParam {Object} tables
- * @apiUse tableAttributes
- * @apiSuccess {Object} tables
- * @apiParam {number} string
- * @apiUse tableParams
- *
- * @apiPermission admin
- */
-
 router.put('/:id', function (req, res) {
   const io = req.app.get('io');
+  let previousEnabled;
   db.Table.findOne({ where: { id: req.params.id, eventId: req.eventId } }).then(table => {
     if (table === null) throw new Error('table not found');
+    previousEnabled = table.enabled;
     return table.update({ ...req.body.table, eventId: req.eventId });
   }).then(table => {
     res.send({ table });
     io.sockets.emit("update", { table, eventId: req.eventId });
+    if (previousEnabled !== false && table.enabled === false) {
+      createNotification({
+        eventId: req.eventId,
+        entityType: 'table',
+        entityId: table.id,
+        action: 'deactivated',
+        message: `Tisch deaktiviert: ${table.name}`
+      }).then((notification) => {
+        if (notification) {
+          io.sockets.emit("notification", { notification, eventId: req.eventId });
+        }
+      });
+    }
   }).catch(error => {
     res.status(400).send({
       'errors': {
@@ -140,16 +87,6 @@ router.put('/:id', function (req, res) {
     });
   });
 });
-
-/**
- * @api {delete} api/tables/:id Delete one table
- * @apiGroup Table
- * @apiName DeleteTable
- * @apiParam {number} string Id
- *
- * @apiPermission admin
- * @apiSuccess {object} object empty Object {}
- */
 
 router.delete('/:id', function (req, res) {
   const io = req.app.get('io');
